fix card spacing

--- a/styles/components/ImageCard/ImageCard.module.scss
+++ b/styles/components/ImageCard/ImageCard.module.scss
@@ -24,6 +24,7 @@
 .imgCard.right {
   @include a.media(smDesktop) {
     background-image: none;
+    padding: 0;
   }
 }
 
